game-of-pods/gallery-of-bravos/iron-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iron-db
  template:
    metadata:
      labels:
        app: iron-db
        db: mariadb
    spec:
      containers:
      - name: iron-db
        image: kodekloud/irondb:2.0
        volumeMounts:
          - name: db
            mountPath: /var/lib/mysql
      volumes:
        - name: db
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  selector:
    db: mariadb
    app: iron-db
  ports:
  - port: 3306
    targetPort: 3306
